# bstock

./: Cargo.toml  LICENSE  README.md  stocks_config.json
src/: app.rs  data.rs  event.rs  main.rs  yahooapi.rs
src/app/: handlers.rs  mod.rs  run.rs  state.rs
src/lib/: analysis.rs  config.rs  error.rs  lib.rs  persistence.rs  stock_data.rs  yahooapi.rs
src/ui/: chart.rs  detail.rs  edit.rs  layout.rs  metrics.rs  mod.rs  selector.rs
stock_predictor_lib/: Cargo.toml
stock_predictor_lib/src/: analysis.rs  config.rs  stock_data.rs  yahooapi.rs
tests/: integration_test.rs
