[workspace]
members = [
    "stock_predictor_lib",
]

[package]
name = "stock_predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
stock_predictor_lib = { path = "stock_predictor_lib" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
crossterm = "0.27.0"

[dev-dependencies]
approx = "0.4.0"
