[package]
name = "bstock"
version = "0.1.1"
edition = "2024"
description = "A TUI application for analyzing and predicting stock prices"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
crossterm = "0.27.0"
yahoo_finance_api = "2.0"
chrono = "0.4"
time = "0.3"
ndarray = { version = "0.15", features = ["approx"] }
thiserror = "1.0"
directories = "5.0"

[dev-dependencies]
approx = "0.4.0"
