[package]
name = "stock_predictor_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
yahoo_finance_api = "2.0"
chrono = "0.4"
time = "0.3"
ndarray = { version = "0.15", features = ["approx"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.4.0"
